test_outputs/connlist/exposure_allow_all_two_workloads_test_explain_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => hello-world/workload-a[Deployment]:

Allowed connections:
	Allowed TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy hello-world/allow-ingress-and-egress-in-entire-cluster allows connection by Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => hello-world/workload-b[Deployment]:

Allowed connections:
	Allowed TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy hello-world/allow-ingress-and-egress-in-entire-cluster allows connection by Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255:

Allowed connections:
	Allowed TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy hello-world/allow-ingress-and-egress-in-entire-cluster allows connection by Egress rule #1
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment]:

Allowed connections:
	Allowed TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy hello-world/allow-ingress-and-egress-in-entire-cluster allows connection by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy hello-world/allow-ingress-and-egress-in-entire-cluster allows connection by Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255:

Allowed connections:
	Allowed TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy hello-world/allow-ingress-and-egress-in-entire-cluster allows connection by Egress rule #1
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment]:

Allowed connections:
	Allowed TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy hello-world/allow-ingress-and-egress-in-entire-cluster allows connection by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy hello-world/allow-ingress-and-egress-in-entire-cluster allows connection by Ingress rule #1
